<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSubTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/subtitulo"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtSeiscentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/garrafa600ml"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtSeiscentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_o_preco"
                android:inputType="numberDecimal"
                android:theme="@style/StyledTilEditTextTheme" />

            <TextView
                android:id="@+id/txtQuatrocentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/latao473ml"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtQuatrocentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_o_preco"
                android:inputType="numberDecimal"
                android:theme="@style/StyledTilEditTextTheme" />

            <TextView
                android:id="@+id/txtTrezentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/lata350ml"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTrezentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_o_preco"
                android:inputType="numberDecimal"
                android:theme="@style/StyledTilEditTextTheme" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="96dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/botaocustomizado"
                android:text="@string/calcular" />

            <TextView
                android:id="@+id/edtAlerta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>